# longhorn-release

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  justfile  shell.nix
.github/workflows/: pr.yml  tag.yml
data/: draft-release-note.md
src/: common.rs  git.rs  github.rs  global.rs  macros.rs  main.rs
src/args/: changelog.rs  mod.rs  pr.rs  release.rs  tag.rs
src/cmds/: changelog.rs  mod.rs  pr.rs  release.rs  tag.rs
