[package]
name = "renote"
version = "0.1.0"
edition = "2021"
description = "CLI for GitThub release"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive", "env"] }
anyhow = { version = "1.0.75" }
which = { version = "5.0.0" }
maplit = { version = "1.0.2" }
tracing-subscriber = { version = "0.3.17" }
tracing-log = { version = "0.1.3" }
tracing = { version = "0.1.39" }
regex = { version = "1.10.1" }
lazy_static = { version = "1.4.0" }
fs_extra = { version = "1.3.0" }
octocrab = { version = "0.31.2" }
once_cell = { version = "1.18.0" }
tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "macros"] }
indoc = { version = "2.0.4" }
tempfile = { version = "3.8.0" }
filepath = { version = "0.1.2" }
async-trait = { version = "0.1.74" }
convert_case = { version = "0.6.0" }
indexmap = { version = "2.0.2" }
serde = { version = "1.0.193", features = ["derive"] }
semver = { version = "1.0.20", features = [] }
is_executable = { version = "1.0.1" }
chrono = { version = "0.4.31", features = [] }

[profile.release]
strip = true
opt-level = "z"
lto = true