[package]
name = "longhorn-release"
version = "0.1.0"
edition = "2021"
description = "CLI for Longhorn Release Tasks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
anyhow = { version = "1.0.75" }
which = { version = "5.0.0" }
maplit = { version = "1.0.2" }
tracing-subscriber = { version = "0.3.17" }
tracing-log = { version = "0.1.3" }
tracing = { version = "0.1.39" }
regex = { version = "1.10.1" }
lazy_static = { version = "1.4.0" }

[profile.release]
strip = true
opt-level = "z"
lto = true